# secure-storage-binding

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FindBerkeleyDB.cmake  MAINTAINERS  README.md  manifest.yml  secure-storage.spec
autobuild/linux/: autobuild
ci/: test_and_coverage.sh
conf.d/cmake/: FindBerkeleyDB.cmake  config.cmake
conf.d/wgt/: config.xml.in
docs/: 1_Architecture.md  2_Installation.md  3_Usage.md  4_API_description.md  api-services-book.yml
htdocs/: CMakeLists.txt  index.html
redtest/: run-redtest
secstorage/: CMakeLists.txt  secure-storage-service-binding.c
test/: CMakeLists.txt  py-test.py
test/afb-test/: CMakeLists.txt
test/afb-test/etc/: CMakeLists.txt  aft-agl-secure-storage.json  aft-secure-storage.json
test/afb-test/fixtures/: CMakeLists.txt
test/afb-test/tests/: CMakeLists.txt  secstorage.lua  secstoreadmin.lua  secstoreglobal.lua
